# AdventOfCode2025

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  build_all.sh  day01.py  day02.py  day03.py  day04.cpp  day04.py  day05.py  day06.py  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day12.py  pyproject.toml  run_all.sh
utils/: avoid5.py
